--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,4 +22,4 @@ jobs:
       with:
         # Directory containing files to upload
         name: WolfSmartsetCollector
-        path: WolfSmartsetCollector/bin/Release/publish
+        path: WolfSmartsetCollector/bin/Release/netcoreapp2.1/publish/
